clear edit button layout bug fix

--- a/src/Components/addTask.css
+++ b/src/Components/addTask.css
@@ -65,6 +65,9 @@ input:focus {
         margin-inline: 5px;
         margin-bottom: 10px;
     }
+    .clearEditing {
+        width: 30%;
+    }
 }
 
 @media only screen and (min-width: 600px) {
@@ -80,6 +83,9 @@ input:focus {
         margin-inline: 5px;
         margin-bottom: 10px;
     }
+    .clearEditing {
+        width: 30%;
+    }
 }
 
 @media only screen and (min-width: 800px) {
@@ -87,8 +93,10 @@ input:focus {
         width: 490px;
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
     }
+
     input {
         width: 70%;
         padding: 5px;
